# cpat

./: .gitignore  .readthedocs.yaml  MANIFEST.in  PKG-INFO  README.rst  pyproject.toml  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
docs/_build/doctrees/: environment.pickle  getting_started.doctree  index.doctree  installation.doctree  introduction.doctree
docs_v3/: conf.py  index.rst
lib/CPAT.egg-info/: PKG-INFO  SOURCES.txt
lib/cpmodule/: FrameKmer.py  fasta.py  find_orfs.py  orf.py  utils.py
prebuilt_models/: .Rapp.history
src/CPAT.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/cpmodule/: __init__.py  ireader.py  utils.py
test/: .Rapp.history  1.sh  2.sh  Human_test_coding_mRNA.fa  a.bed  chongbo.fa  common.xls  human_logit.feature.xls  human_logit.logit.RData  human_logit.make_logitModel.r  human_train2.logit.RData  output.ORF_prob.best.tsv  output.ORF_prob.tsv  output.ORF_seqs.fa  output.r  output1.ORF_prob.best.tsv  output1.ORF_prob.tsv  output1.r  output2.ORF_seqs.fa  test.2.fa  test.sh  test3.fa  test4.fa  test_coding_bed  test_coding_bed.r  test_coding_fasta  test_coding_fasta.r  test_noncoding_bed  test_noncoding_bed.r  test_noncoding_fasta  test_noncoding_fasta.r
test_dat/: Human.feature.xls  Human.logit.RData  Human.make_logitModel.r  Human_test_coding_mRNA_hg19.bed  human_train2.make_logitModel.r
test_files/: Human_Hexamer.tsv  Human_test_noncoding_hg19.bed  human_train.logit.RData  human_train.make_logitModel.r  human_train2.feature.xls  human_train_BED_CDS.xls  test.fa
(+23 files in other folders)
